# podcast-thumbnail

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/headshot_generation/: AGENTS.md
agents/orchestration_cli/: AGENTS.md
agents/speaker_identification/: AGENTS.md
agents/thumbnail_composition/: AGENTS.md
scripts/: auto_commit_push.sh
src/headshot_generation/: AGENTS.md  __init__.py  gemini_client.py
src/orchestration_cli/: AGENTS.md  __init__.py  cli.py  pipeline.py
src/podcast_thumbnail/: __init__.py  cli.py  pipeline.py
src/speaker_identification/: AGENTS.md  __init__.py  cropper.py  frame_sampler.py  gemini_identify.py  prompt.py
src/thumbnail_composition/: AGENTS.md  __init__.py  gemini_composer.py
